--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ LOG_LEVEL=debug
 
 # Go to https://smee.io/new set this to the URL that you are redirected to.
 WEBHOOK_PROXY_URL=
+
+# The path to the private key you generated
+PRIVATE_KEY=
