--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "format:check": "prettier --check {src,test}/**/*.{js,ts,json,md}"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "probot": "^12.2.4"
   },
   "devDependencies": {
-    "prettier": "^2.8.8",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.0.0",
     "jest": "^29.0.0",
     "nock": "^13.0.5",
+    "prettier": "^2.8.8",
     "smee-client": "^1.2.2",
     "ts-jest": "^29.0.0",
     "typescript": "^4.1.3"
