--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "github-bot",
+  "name": "grumpy-octo-bot",
   "version": "1.0.0",
   "private": true,
   "description": "A GitHub bot work with Probot",
