--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Bringing a touch of grumpiness to GitHub operations, with a nod to the beloved Octocat",
   "author": "PunGrumpy",
   "license": "ISC",
-  "homepage": "https://github.com//",
+  "homepage": "https://github.com/PunGrumpy/github-bot",
   "keywords": [
     "probot",
     "github",
@@ -23,14 +23,14 @@
     "probot": "^12.2.4"
   },
   "devDependencies": {
-    "@types/jest": "^29.0.0",
-    "@types/node": "^18.0.0",
-    "jest": "^29.0.0",
-    "nock": "^13.0.5",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^20.1.2",
+    "jest": "^29.5.0",
+    "nock": "^13.3.1",
     "prettier": "^2.8.8",
-    "smee-client": "^1.2.2",
-    "ts-jest": "^29.0.0",
-    "typescript": "^4.1.3"
+    "smee-client": "^1.2.3",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">= 10.13.0"
