--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,11 @@ services:
     container_name: github-bot
     restart: always
     volumes:
-      - src:/app/src
-      - node_modules:/app/node_modules
+      - .:/usr/src/app
     env_file:
       - .env
-    runtime: nvidia
-    devices:
-      - /dev/dri:/dev/dri
+    environment:
+      - NODE_ENV=production
+      - PRIVATE_KEY=${PRIVATE_KEY}
+      - APP_ID=${APP_ID}
+    command: yarn start
