:pencil: update env example

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ WEBHOOK_PROXY_URL=
 
 # The path to the private key you generated
 PRIVATE_KEY=
+# If you want to private key path use this
+# PRIVATE_KEY_PATH=
 
 # Discord Webhook URL
 DISCORD_WEBHOOK_URL=
