--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,6 @@ services:
       - .env
     environment:
       - NODE_ENV=production
-      - PRIVATE_KEY=${PRIVATE_KEY}
+      - PRIVATE_KEY_PATH=${PRIVATE_KEY_PATH}
       - APP_ID=${APP_ID}
     command: yarn start
