--- a/tsconfig.json
+++ b/tsconfig.json
@@ -69,6 +69,6 @@
     "pretty": false,
     "skipLibCheck": true
   },
-  "include": ["src/"],
+  "include": ["src/", "src/api", "src/api/github/webhooks"],
   "compileOnSave": false
 }
