--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
   "version": 2,
-  "builds": [{ "src": "src/index.ts", "use": "@vercel/node" }]
+  "builds": [{ "src": "src/index.ts", "use": "@vercel/node" }],
+  "github": {
+    "silent": true
+  }
 }
