--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.1",
     "@types/node": "^20.1.2",
+    "@types/pino": "^7.0.5",
     "jest": "^29.5.0",
     "nock": "^13.3.1",
     "prettier": "^2.8.8",
