:package: update type pino

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -69,6 +69,11 @@
     "pretty": false,
     "skipLibCheck": true
   },
-  "include": ["src/", "src/api", "src/api/github/webhooks"],
+  "include": [
+    "src/",
+    "src/api",
+    "src/api/github/webhooks",
+    "pino-std-serializers.d.ts"
+  ],
   "compileOnSave": false
 }
