--- a/tsconfig.json
+++ b/tsconfig.json
@@ -73,7 +73,8 @@
     "src/",
     "src/api",
     "src/api/github/webhooks",
-    "pino-std-serializers.d.ts"
+    "pino-std-serializers.d.ts",
+    "pino.d.ts"
   ],
   "compileOnSave": false
 }
