:rewind: revert to before use api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -69,12 +69,6 @@
     "pretty": false,
     "skipLibCheck": true
   },
-  "include": [
-    "src/",
-    "src/api",
-    "src/api/github/webhooks",
-    "pino-std-serializers.d.ts",
-    "pino.d.ts"
-  ],
+  "include": ["src/"],
   "compileOnSave": false
 }
