--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,9 @@
   "compilerOptions": {
     /* Basic Options */
     "incremental": true /* Enable incremental compilation */,
-    "target": "es5" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */,
-    "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
+    "target": "ES2020" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */,
+    "module": "CommonJS" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
     "lib": [
-      "es2015",
-      "es2017",
-      "es2019",
       "es2020",
       "esnext"
     ] /* Specify library files to be included in the compilation. */,
@@ -72,6 +69,6 @@
     "pretty": false,
     "skipLibCheck": true
   },
-  "include": ["src/", "src/**/*.d.ts"],
+  "include": ["src/", "src/**/*.d.ts", "*.d.ts"],
   "compileOnSave": false
 }
